Portfolio images service and portfolio full, about advances

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,6 +4,7 @@
     <main class="flex-grow">
         <router-outlet></router-outlet>
     </main>
-
+    
+    <app-scroll-top></app-scroll-top>
     <app-footer></app-footer>
 </div>
