--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="bg-white shadow-md px-4 py-6 flex items-center justify-between">
+<nav class="bg-white shadow-xs px-4 py-6 flex items-center justify-between">
     <!-- Desktop Menu -->
     <div class="hidden md:flex items-center justify-center text-blue text-sm">
         <a href="https://www.instagram.com/csierraphotography/" target="_blank" aria-label="Instagram">
@@ -9,7 +9,7 @@
             class="p-1 mx-1 cursor-pointer transition-all duration-200 ease-in-out hover:text-blue-mid hover:scale-105"></fa-icon>
     </div>
 
-    <ul class="hidden md:flex gap-8 items-center justify-between title-tabs font-medium">
+    <ul class="hidden md:flex gap-8 items-center justify-between title-tabs">
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105"><a
                 routerLink="/">HOME</a></li>
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105"><a
