--- a/src/app/features/home/home-page/home-page.html
+++ b/src/app/features/home/home-page/home-page.html
@@ -11,7 +11,7 @@
             <span class="block mb-8">Soul</span>
         </h1>
         <a routerLink="/booking"
-            class="inline-block underline underline-offset-8 decoration-2 transition-transform duration-500 hover:text-blue-mid">
+            class="inline-block underline underline-offset-8 decoration-2 transition-transform duration-500 hover:text-blue">
             Book your date today
         </a>
     </div>
@@ -151,7 +151,7 @@
 
 <section class="about relative py-10 mb-6">
     <h1 class="text-center uppercase mt-1 mb-6">About</h1>
-    <div class="max-w-6xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
+    <div class="max-w-4xl mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
 
         <div>
             <h2 class="font-serif font-light text-3xl md:text-4xl leading-snug mb-6">
@@ -183,7 +183,7 @@
     <h1 class="text-center uppercase mt-1 mb-6">Details</h1>
     <h2 class="font-serif font-light text-2xl md:text-3xl text-center mb-6">Browse our packages <br> to find your
         perfect match</h2>
-    <div class="flex flex-col md:flex-row justify-center items-stretch gap-8 p-6">
+    <div class="flex flex-col md:flex-row justify-center items-stretch gap-6 p-6">
         @for (card of packageType; track $index) {
         <div class="relative w-full md:w-80 aspect-[4/5] rounded-2xl overflow-hidden cursor-pointer group shadow-lg">
 
@@ -217,7 +217,7 @@
 <section class="testimonials py-10 mb-6">
     <h1 class="uppercase text-center mt-1 mb-6">What they say</h1>
     <h2 class="font-serif font-light mb-6 text-2xl md:text-3xl text-center">Words from our clients</h2>
-    <div class="container grid md:grid-cols-3 gap-6 mx-auto">
+    <div class="container grid md:grid-cols-3 gap-4 max-w-6xl mx-auto">
         <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
             <img src="assets/couple.jpg" class="w-24 h-24 object-cover rounded-full"
                 alt="Celeste and Charles wedding photo">
@@ -229,7 +229,7 @@
             <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
         </article>
         <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
-            <img src="assets/couple.jpg" class="w-24 h-24 object-cover rounded-full"
+            <img src="assets/clients-1.jpg" class="w-24 h-24 object-cover rounded-full"
                 alt="Celeste and Charles wedding photo">
             <p class="font-serif text-lg font-bold mt-4">Celeste & Charles</p>
             <p class="text-center text-gray-600 mt-2">
@@ -239,7 +239,7 @@
             <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
         </article>
         <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
-            <img src="assets/couple.jpg" class="w-24 h-24 object-cover rounded-full"
+            <img src="assets/clients-4.jpg" class="w-24 h-24 object-cover rounded-full"
                 alt="Celeste and Charles wedding photo">
             <p class="font-serif text-lg font-bold mt-4">Celeste & Charles</p>
             <p class="text-center text-gray-600 mt-2">
@@ -249,7 +249,17 @@
             <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
         </article>
         <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
-            <img src="assets/couple.jpg" class="w-24 h-24 object-cover rounded-full"
+            <img src="assets/clients-3.jpg" class="w-24 h-24 object-cover rounded-full"
+                alt="Celeste and Charles wedding photo">
+            <p class="font-serif text-lg font-bold mt-4">Celeste & Charles</p>
+            <p class="text-center text-gray-600 mt-2">
+                If you're not using testimonials, you're missing out on a golden opportunity
+                to turn visitors and potential buyers into actual customers.
+            </p>
+            <fa-icon [icon]="faQuote" class="text-pink text-xl my-2"></fa-icon>
+        </article>
+        <article class="flex flex-col items-center bg-cloud/50 shadow-xs p-6 rounded-2xl">
+            <img src="assets/hor-5.jpg" class="w-24 h-24 object-cover rounded-full"
                 alt="Celeste and Charles wedding photo">
             <p class="font-serif text-lg font-bold mt-4">Celeste & Charles</p>
             <p class="text-center text-gray-600 mt-2">
