--- a/src/app/features/about/about-page/about-page.html
+++ b/src/app/features/about/about-page/about-page.html
@@ -1,100 +1,131 @@
-<!-- <div class="container mx-auto my-6 grid gap-4 lg:grid-cols-3">
-    <div class="grid gap-4 lg:col-span-2">
-
-        <div class="grid sm:grid-cols-3 gap-4">
-            <div class="bg-pink-mid/40 rounded-3xl sm:col-span-2 p-8 flex items-end">
-                <p class="font-serif font-light text-2xl md:text-3xl mb-6">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempor felis magna, vitae semper ipsum
-                    tristique in. Nullam malesuada consequat luctus.
-                </p>
+<div>
+    <section class="min-h-screen w-full grid grid-cols-1 md:grid-cols-2">
+        <div class="flex flex-col justify-center px-6 md:px-12 lg:px-24 py-6 bg-neutral-50 text-left">
+            <h2
+                class="font-serif text-gray-900 text-4xl md:text-5xl lg:text-6xl font-light leading-tight tracking-tight">
+                Based in Guadalajara, Mexico — capturing memories worldwide.
+            </h2>
+            <p class="mt-6 text-sm md:text-base text-neutral-600 leading-relaxed max-w-md">
+                With over six years of photography experience, I've had the privilege of capturing stories across México
+                and around the world — from the cobblestone streets of Italy and Greece to the breathtaking landscapes
+                of Switzerland and Turkey.
+            </p>
+            <div>
+                <div class="flex items-center gap-8 uppercase text-xs tracking-wider my-6">
+                    <a href="" class="hover:underline">Instagram</a>
+                    <a href="" class="hover:underline">Pinterest</a>
+                </div>
+                <app-buttons type="button" size="sm" variant="outline" color="neutral">
+                    View Portfolio <fa-icon [icon]="faArrow"></fa-icon>
+                </app-buttons>
             </div>
+        </div>
+        <div class="h-full flex justify-center items-center bg-neutral-100">
+            <img class="h-full w-2/3 md:w-3/4 object-contain drop-shadow-lg" src="assets/self-noback.png" alt="">
+        </div>
+    </section>
 
-            <img class="w-full h-48 sm:h-full object-cover object-center rounded-3xl" src="assets/about.jpg"
-                alt="Celeste Sierra">
+    <section class="min-h-screen w-full bg-neutral-100 grid grid-cols-1 md:grid-cols-2">
+        <div class="grid grid-cols-3 gap-2 p-4">
+            <img class="object-cover object-center aspect-square" src="assets/arch-1.jpg" alt="">
+            <img class="object-cover object-center aspect-square col-span-2 row-span-2" src="assets/arch-2.jpg" alt="">
+            <img class="object-cover object-center aspect-square" src="assets/arch-3.jpg" alt="">
+            <img class="object-cover object-center aspect-square" src="assets/arch-1.jpg" alt="">
+            <img class="object-cover object-center aspect-square" src="assets/arch-3.jpg" alt="">
+        </div>
+        <div class="flex flex-col justify-center px-6 md:px-12 lg:px-24 py-6">
+            <h2 class="text-4xl md:text-5xl font-light uppercase tracking-tight">With a Bachelor's degree in
+                <i>Architecture</i> and a specialization in <b class="font-thin">Photography</b>
+            </h2>
+            <p class="mt-6 text-base text-neutral-700 leading-relaxed">
+                My work lives at the intersection of design and emotion—creating imagery that is both refined and deeply
+                resonant.
+            </p>
+        </div>
+    </section>
+
+    <section id="portfolio" class="min-h-screen flex flex-col justify-center bg-neutral-900 text-white px-6 py-16">
+        <div class="max-w-5xl mx-auto text-center mb-16">
+            <h2 class="text-4xl md:text-5xl font-serif mb-6">Portfolio</h2>
+            <p class="text-sm md:text-base max-w-2xl mx-auto">
+                A curated collection of timeless weddings, fashion editorials, and personal stories.
+                Each frame tells a story of love, light, and emotion.
+            </p>
         </div>
 
-        <div class="grid sm:grid-cols-2 gap-4">
-            <div class="bg-pink-mid/40 rounded-3xl flex flex-col justify-end p-8">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempor felis magna, vitae semper ipsum
-                    tristique in. Nullam malesuada consequat luctus.
-                </p><br>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempor felis magna, vitae semper ipsum
-                    tristique in. Nullam malesuada consequat luctus.
-                </p>
+        <div class="grid grid-cols-3 gap-2 md:gap-4 max-w-6xl mx-auto">
+            <div routerLink="/portfolio/weddings"
+                class="h-58 p-2 md:p-6 flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
+                <span class="text-sm md:text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
+                    Weddings 
+                </span>
+                <span class="flex justify-between items-center text-gray-600">
+                    View Collection
+                    <fa-icon class="text-gray-600" [icon]="faArrow"></fa-icon>
+                </span>
             </div>
-            <div class="bg-pink-mid/40 rounded-3xl flex flex-col justify-between p-8">
+
+            <div routerLink="/portfolio/engagements"
+                class="h-58 p-2 md:p-6 flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
+                <span class="text-sm md:text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
+                    Engagements 
+                </span>
+                <span class="flex justify-between items-center text-gray-600">
+                    View Collection
+                    <fa-icon class="text-gray-600" [icon]="faArrow"></fa-icon>
+                </span>
+            </div>
+
+           <div routerLink="/portfolio/photoshoots"
+                class="h-58 p-2 md:p-6 flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
+                <span class="text-sm md:text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
+                    Photoshoots 
+                </span>
+                <span class="flex justify-between items-center text-gray-600">
+                    View Collection
+                    <fa-icon class="text-gray-600" [icon]="faArrow"></fa-icon>
+                </span>
+            </div>
+        </div>
+
+        <app-buttons class="mx-auto mt-12 inline-block" routerLink="/portfolio" type="button" size="md" variant="solid"
+            color="neutral">
+            View Full Portfolio
+        </app-buttons>
+    </section>
+
+    <section id="services" class="min-h-screen flex flex-col justify-center px-6 bg-gray-50">
+        <div class="max-w-4xl mx-auto text-center">
+            <h2 class="text-4xl md:text-5xl font-serif mb-8">Services</h2>
+            <p class="text-base text-gray-700 leading-relaxed max-w-2xl mx-auto mb-12">
+                From intimate weddings to editorial shoots, every service is crafted to reflect your story with elegance
+                and artistry.
+            </p>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
                 <div>
-                    Any questions?
+                    <h3 class="text-2xl font-serif mb-2">Weddings</h3>
+                    <p class="text-gray-600">Documenting your day with timeless, editorial imagery.</p>
                 </div>
-                <div class="flex justify-between items-center">
-                    <p class=" text-2xl md:text-3xl">Contact me</p>
-                    <fa-icon routerLink="/contact" [icon]="faArrow" class="cursor-pointer text-sm"></fa-icon>
+                <div>
+                    <h3 class="text-2xl font-serif mb-2">Editorials</h3>
+                    <p class="text-gray-600">Luxury styled shoots with an artistic eye.</p>
+                </div>
+                <div>
+                    <h3 class="text-2xl font-serif mb-2">Portraits</h3>
+                    <p class="text-gray-600">Intimate, elegant sessions tailored to you.</p>
                 </div>
             </div>
         </div>
-    </div>
-
-    <div class="h-64 lg:h-[80vh] grid grid-rows-[1fr_auto] gap-4">
-
-        <div class="bg-pink-mid/40 rounded-3xl p-8">
-            <mat-accordion>
-                <mat-expansion-panel [expanded]="true">
-                    <mat-expansion-panel-header>
-                        <mat-panel-title> Weddings </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <p>This is the primary content of the panel.</p>
-                </mat-expansion-panel>
-
-                <mat-expansion-panel (opened)="panelOpenState.set(true)" (closed)="panelOpenState.set(false)">
-                    <mat-expansion-panel-header>
-                        <mat-panel-title> Engagements </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <p>I'm visible because I am open</p>
-                </mat-expansion-panel>
-
-                <mat-expansion-panel (opened)="panelOpenState.set(true)" (closed)="panelOpenState.set(false)">
-                    <mat-expansion-panel-header>
-                        <mat-panel-title> Photoshoots </mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <p>I'm visible because I am open</p>
-                </mat-expansion-panel>
-            </mat-accordion>
-        </div>
-
-        <div class="bg-pink-mid/40 rounded-3xl flex gap-6 justify-center items-center p-8 uppercase">
-            <p>Instagram</p>
-            <p>Pinterest</p>
-        </div>
-    </div>
-</div> -->
-
-<div class="h-screen w-full snap-y snap-mandatory overflow-y-scroll scroll-smooth font-serif">
-    <section class="relative h-screen w-full snap-start grid grid-cols-1 md:grid-cols-2">
-        <div class="flex flex-col justify-center px-12 bg-neutral-50">
-            <h1 class="text-5xl md:text-6xl font-light uppercase leading-tight tracking-wide break-normal">
-                Guadalajara, Mexico
-            </h1>
-            <p class="mt-6 text-lg text-neutral-600">
-                Six years of refined photography. Timeless, elegant, and designed for the moments that matter most.
-            </p>
-        </div>
-        <div class="relative bg-neutral-200">
-            <img class="absolute bottom-0 left-1/2 -translate-x-1/2 w-2/3 md:w-3/4 object-contain" src="assets/self-noback.png" alt="">
-        </div>
     </section>
 
-    <section class="h-screen w-full bg-neutral-100 snap-start flex items-center justify-center">
-        <div class="max-w-2xl text-center">
-            <h2 class="text-5xl md:text-7xl font-light uppercase tracking-tight">Our Philosophy</h2>
-            <p class="mt-6 text-lg text-neutral-700 leading-relaxed">
-                We capture love stories with a balance of artistry and authenticity — a luxurious editorial touch with heartfelt emotion.
+    <section id="contact" class="min-h-screen flex flex-col justify-center px-6 bg-white">
+        <div class="max-w-3xl mx-auto text-center">
+            <h2 class="text-4xl md:text-5xl font-serif mb-6">Let’s Create Together</h2>
+            <p class="text-lg text-gray-600 mb-10">
+                Ready to begin your story? Reach out for availability and bookings.
             </p>
+            <app-buttons routerLink="/contact" type="button" size="lg" variant="outline" color="neutral">Get in
+                Touch</app-buttons>
         </div>
-    </section>
-
-    <section class="h-screen w-full bg-neutral-900 text-white snap-start flex items-center justify-center">
-        <h2 class="text-6xl md:text-8xl font-light tracking-wide uppercase">Portfolio</h2>
     </section>
 </div>
