About section updates

--- a/src/app/features/about/about-page/about-page.html
+++ b/src/app/features/about/about-page/about-page.html
@@ -53,10 +53,10 @@
             </p>
         </div>
 
-        <div class="grid grid-cols-3 gap-2 md:gap-4 max-w-6xl mx-auto">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-2 md:gap-4 max-w-6xl mx-auto">
             <div routerLink="/portfolio/weddings"
-                class="h-58 p-2 md:p-6 flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
-                <span class="text-sm md:text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
+                class="h-46 md:h-58 p-6 aspect-square flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
+                <span class="text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
                     Weddings 
                 </span>
                 <span class="flex justify-between items-center text-gray-600">
@@ -66,8 +66,8 @@
             </div>
 
             <div routerLink="/portfolio/engagements"
-                class="h-58 p-2 md:p-6 flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
-                <span class="text-sm md:text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
+                class="h-46 md:h-58 p-6 aspect-square flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
+                <span class="text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
                     Engagements 
                 </span>
                 <span class="flex justify-between items-center text-gray-600">
@@ -77,8 +77,8 @@
             </div>
 
            <div routerLink="/portfolio/photoshoots"
-                class="h-58 p-2 md:p-6 flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
-                <span class="text-sm md:text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
+                class="h-46 md:h-58 p-6 aspect-square flex flex-col justify-end bg-neutral-100 hover:bg-neutral-300 transition shadow-md cursor-pointer group">
+                <span class="text-lg font-serif tracking-wide text-gray-800 group-hover:text-gray-900">
                     Photoshoots 
                 </span>
                 <span class="flex justify-between items-center text-gray-600">
