--- a/src/app/shared/navbar/navbar.html
+++ b/src/app/shared/navbar/navbar.html
@@ -10,11 +10,11 @@
     </div>
 
     <ul class="hidden md:flex gap-8 items-center justify-between title-tabs">
-        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105"><a
+        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105"><a
                 routerLink="/">HOME</a></li>
-        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105"><a
+        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105"><a
                 routerLink="/portfolio">PORTFOLIO</a></li>
-        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105">
+        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
             <a routerLink="/about">ABOUT</a>
         </li>
         <li class="cursor-pointer transition-all duration-200 ease-in-out hover:scale-105">
@@ -22,13 +22,13 @@
                 <img src="assets/prov-logo.svg" alt="Celeste Sierra logo">
             </a>
         </li>
-        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105">
+        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
             <a routerLink="/booking">BOOKING</a>
         </li>
-        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105">
+        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
             <a routerLink="/details">DETAILS</a>
         </li>
-        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-blue hover:scale-105">
+        <li class="cursor-pointer transition-all duration-200 ease-in-out hover:text-gray-400 hover:scale-105">
             <a routerLink="/contact">CONTACT</a>
         </li>
     </ul>
