--- a/src/app/features/home/home-page/home-page.html
+++ b/src/app/features/home/home-page/home-page.html
@@ -32,7 +32,7 @@
                 class="relative group flex items-center justify-center overflow-hidden cursor-pointer shadow-md">
 
                 <img [src]="type.image" [alt]="type.title"
-                    class="w-full h-full object-cover transition-transform duration-700 ease-out group-hover:scale-110" />
+                    class="w-full h-full object-cover transition-transform duration-700 ease-out group-hover:scale-110">
 
                 <div
                     class="absolute inset-0 bg-black/40 opacity-40 group-hover:opacity-100 transition-opacity duration-500">
@@ -172,7 +172,7 @@
 
         <div class="relative">
             <div class="absolute -top-6 -left-6 w-32 h-32 bg-sand/20 rounded-full -z-10"></div>
-            <img src="assets/about.jpg" alt="Celeste" class="rounded-3xl shadow-lg object-cover w-full h-auto" />
+            <img src="assets/about.jpg" alt="Celeste" class="rounded-3xl shadow-lg object-cover w-full h-auto">
         </div>
     </div>
 
@@ -188,7 +188,7 @@
         <div class="relative w-full md:w-80 aspect-[4/5] rounded-2xl overflow-hidden cursor-pointer group shadow-lg">
 
             <img [src]="card.image" alt="{{ card.title }}"
-                class="absolute inset-0 w-full h-full object-cover object-center transition-transform duration-700 group-hover:scale-110" />
+                class="absolute inset-0 w-full h-full object-cover object-center transition-transform duration-700 group-hover:scale-110">
 
             <div
                 class="absolute inset-0 bg-gradient-to-t from-black/40 via-black/20 to-transparent opacity-90 group-hover:opacity-100 transition-opacity duration-500">
